--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <br>
         <hr>
 
-        <a class="move" href="pastthings.html">기출문제</a>
-        <a class="move" href="tip.html">공부팁</a>
-        <a class="move" href="questionbook.html">문제집추천</a>
-        <a class="move" href="school.html">진로●진학</a>
+        <a class="move" href="진로프로젝트/pastthings.html">기출문제</a>
+        <a class="move" href="진로프로젝트/tip.html">공부팁</a>
+        <a class="move" href="진로프로젝트/questionbook.html">문제집추천</a>
+        <a class="move" href="진로프로젝트/school.html">진로●진학</a>
 
         <br>
         <hr>
