--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <a href="index.html" style="color:brown"><h1 class="sitename">사이트 이름</h1></a>
-        <a class="scadule" href="scadule.html"><button style="font-size: 50%;" >학사일정</button></a>
+        <a class="scadule" href="진로프로젝트/scadule.html"><button style="font-size: 50%;" >학사일정</button></a>
 
         <br>
         <hr>
