--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         </style>
     </head>
     <body>
-       <h1  style="color:brown" class="sitename">사이트 이름</h1>
-        <a class="scadule" href="진로프로젝트/scadule.html"><button style="font-size: 50%;" >학사일정</button></a>
+        <a href="index.html" style="color:brown"><h1 class="sitename">사이트 이름</h1></a>
+        <a class="scadule" href="scadule.html"><button style="font-size: 50%;" >학사일정</button></a>
 
         <br>
         <hr>
 
-        <a class="move" href="진로프로젝트/pastthings.html">기출문제</a>
-        <a class="move" href="진로프로젝트/tip.html">공부팁</a>
-        <a class="move" href="진로프로젝트/questionbook.html">문제집추천</a>
-        <a class="move" href="진로프로젝트/school.html">진로●진학</a>
+        <a class="move" href="pastthings.html">기출문제</a>
+        <a class="move" href="tip.html">공부팁</a>
+        <a class="move" href="questionbook.html">문제집추천</a>
+        <a class="move" href="school.html">진로●진학</a>
 
         <br>
         <hr>
